# curtsies

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  bootstrap.py  check_keys.py  example.py  fmtstr.py  fsarray.py  gameexample.py  keylog.txt  manualtestidle.py  manualtestkeys.py  manualtestnonblocking  manualtestpaste.py  pyproject.toml  readme.md  setup.cfg  setup.md  setup.py  sumtest.py  termformatconstants.py  test.py  test_get_cursor_pos.py  testcache.py  testrender.py  tests.py  tictactoeexample.py  times.txt  todo  todo.txt  tox.ini  tttplaybitboard.py  window_resize_notes.txt
curtsies/: __init__.py  bpythonparse.py  configfile_keynames.py  curtsieskeys.py  demo_input.py  demo_window.py  escseqparse.py  events.py  fmtfuncs.py  fmtstr.py  formatstring.py  formatstringarray.py  fsarray.py  input.py  termformatconstants.py  termhelpers.py  terminal.py  window.py
docs/: FSArray  FSArray.rst  FmtStr  FmtStr.rst  Input  Input.rst  Makefile  about  about.rst  ansi.py  coloredstrings.rst  conf.py  examples.rst  fmtstr.rst  game.rst  gameloop.rst  index.rst  make.bat  modules.rst  quickstart.rst  requirements.txt  terminal_output.py  window  window.rst
examples/: chat.py  curses_keys.py  demo_fullscreen_window.py  demo_fullscreen_with_input.py  demo_input_paste.py  demo_input_timeout.py  demo_scroll.py  demo_scrolling.py  demo_window.py  example.py  fps.py  gameexample.py  initial_input.py  initial_input_with_cursor.py  manualtestdelay.py  quickstart.py  readme  realtime.py  simple.py  snake.py  sumtest.py  testcache.py  tictactoeexample.py  times.txt  tron.py  tttplaybitboard.py
fmtstr/: __init__.py  bpythonparse.py  canvas.py  escseqparse.py  events.py  fmtfuncs.py  fmtstr.py  fsarray.py  termformatconstants.py  terminal.py  terminalcontrol.py  (+2 more)
(+14 files in other folders)
