[build-system]
requires = [
  "setuptools >= 46.4.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ["py310"]
exclude = '''
(
    /(
          \.git
        | build
        | curtsies.egg-info
        | dist
        | examples
        | notes
        | stubs
    )/
    | bootstrap.py
    | docs/conf.py
)
'''
