[metadata]
name = curtsies
description = Curses-like terminal wrapper, with colored strings!
long_description = file: README.md,
long_description_content_type = text/markdown
url = https://github.com/bpython/curtsies
author = Thomas Ballinger
author_email = thomasballinger@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
zip_safe = False
packages = curtsies
install_requires =
    blessed>=1.5
    cwcwidth
    backports.cached-property; python_version < "3.8"
tests_require =
    pyte
    pytest

[options.package_data]
curtsies = py.typed

[mypy]
warn_return_any = True
warn_unused_configs = True
mypy_path=stubs
files=curtsies
disallow_untyped_defs = True
